--- a/src/weatherSite/requirements.txt
+++ b/src/weatherSite/requirements.txt
@@ -56,7 +56,9 @@ decorator==4.3.0
 defusedxml==0.5.0
 Deprecated==1.2.7
 distributed==1.25.1
+dj-database-url==0.5.0
 Django==2.1.5
+django-heroku==0.3.1
 django-widget-tweaks==1.4.5
 docutils==0.14
 en-core-web-sm==2.2.5
@@ -77,6 +79,7 @@ gmpy2==2.0.8
 google-pasta==0.1.8
 greenlet==0.4.15
 grpcio==1.27.2
+gunicorn==20.0.4
 h5py==2.8.0
 heapdict==1.0.0
 html5lib==1.0.1
@@ -168,6 +171,8 @@ prometheus-client==0.5.0
 prompt-toolkit==2.0.7
 protobuf==3.11.3
 psutil==5.4.8
+psycopg2==2.8.5
+psycopg2-binary==2.8.5
 ptyprocess==0.6.0
 py==1.7.0
 pycodestyle==2.5.0
@@ -256,6 +261,7 @@ webencodings==0.5.1
 websocket-client==0.57.0
 websockets==8.1
 Werkzeug==0.14.1
+whitenoise==5.1.0
 widgetsnbextension==3.4.2
 wrapt==1.11.2
 wurlitzer==1.0.2
